--- a/Aufgabe5.vcxproj
+++ b/Aufgabe5.vcxproj
@@ -18,12 +18,36 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="AtcoCommand.cxx" />
+    <ClCompile Include="aufgabe6.cpp" />
+    <ClCompile Include="Command.cxx" />
+    <ClCompile Include="DynCommandArray.cxx" />
+    <ClCompile Include="FileName.cxx" />
+    <ClCompile Include="Ocurrence.cxx" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AtcoCommand.h" />
+    <ClInclude Include="Command.h" />
+    <ClInclude Include="DynCommandArray.h" />
+    <ClInclude Include="FileName.h" />
+    <ClInclude Include="Ocurrence.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="BigWordSeqPlusCmdsFile.txt" />
+    <Text Include="expectedTypes.txt" />
+    <Text Include="longTest.txt" />
+    <Text Include="shortTest.txt" />
+    <Text Include="TestFileExercise5-3.txt" />
+    <Text Include="testString.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{7fd2a020-84c6-41d8-beca-f6f614824c96}</ProjectGuid>
     <RootNamespace>Aufgabe5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Aufgabe6</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -112,7 +136,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
@@ -124,7 +148,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
@@ -138,23 +162,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="AtcoCommand.cxx" />
-    <ClCompile Include="Aufgabe5.cpp" />
-    <ClCompile Include="FileName.cxx" />
-    <ClCompile Include="Ocurrence.cxx" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="AtcoCommand.h" />
-    <ClInclude Include="FileName.h" />
-    <ClInclude Include="Ocurrence.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="BigWordSeqPlusCmdsFile.txt" />
-    <Text Include="longTest.txt" />
-    <Text Include="shortTest.txt" />
-    <Text Include="testString.txt" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
