--- a/Aufgabe5.vcxproj.filters
+++ b/Aufgabe5.vcxproj.filters
@@ -15,10 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Aufgabe5.cpp">
+    <ClCompile Include="AtcoCommand.cxx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="AtcoCommand.cxx">
+    <ClCompile Include="aufgabe6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Command.cxx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DynCommandArray.cxx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FileName.cxx">
@@ -32,6 +38,12 @@
     <ClInclude Include="AtcoCommand.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Command.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DynCommandArray.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
     <ClInclude Include="FileName.h">
       <Filter>Source Files</Filter>
     </ClInclude>
@@ -43,10 +55,16 @@
     <Text Include="BigWordSeqPlusCmdsFile.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="expectedTypes.txt">
+      <Filter>Source Files</Filter>
+    </Text>
     <Text Include="longTest.txt">
       <Filter>Source Files</Filter>
     </Text>
     <Text Include="shortTest.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="TestFileExercise5-3.txt">
       <Filter>Source Files</Filter>
     </Text>
     <Text Include="testString.txt">
